--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "My Astro Site";
 ---
 
 <html lang="en">
@@ -9,10 +9,10 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<h1>My Astro Site</h1>
+		<title>{pageTitle}</title>
 
 		<a href="/">Home</a>
   		<a href="/about/">About</a>
