--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
 ---
+import Footer from './components/Footer.astro';
+import Header from './components/Header.astro';
+import './styles/global.css';
+
 const pageTitle = "My Astro Site";
 ---
 
@@ -13,9 +17,10 @@ const pageTitle = "My Astro Site";
 	</head>
 	<body>
 		<title>{pageTitle}</title>
-
-		<a href="/">Home</a>
-  		<a href="/about/">About</a>
-  		<a href="/blog/">Blog</a>
+		<Header/>
+		<Footer />
+		<script>
+    	import "../scripts/menu.js";
+  		</script>
 	</body>
 </html>
